--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ torch>=2.0.0
 torchvision>=0.15.0
 
 # MediaPipe for Hand Landmarks
-mediapipe>=0.10.0
+mediapipe==0.10.7
+protobuf==3.20.3
 
 # Data Processing and Utilities
 pandas>=2.0.0
